--- a/web/assets/css/cadastro.css
+++ b/web/assets/css/cadastro.css
@@ -1,83 +1,25 @@
-.login {
-    margin-left: auto;
-    padding: 0.3rem;
+.acme {
+    font-family: "Acme", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
-
-.login img{
-    width: 55px;
-    flex-grow: 3;
-}
-
-.cadastro {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--cor_secundaria);
-    padding: 3rem 2rem;
-    border-radius: 2rem;
-    border: 0.4rem solid var(--cor_primaria);
-    box-shadow: 2rem 2rem;
-}
-
-.cadastro label {
-    font-size: 1.5rem;
-}
-
-.cadastro h3 {
-    font-size: 3rem;
-}
-
-.ir-login {
-    font-size: 1.2rem;
-}
-
-.titulo {
+.roboto {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1.0rem;
     text-align: center;
-    margin-bottom: 1.5rem;
 }
 
-.campo-texto {
-    display: flex;
-    flex-direction: column;
-}
-
-.campo-texto input {
-    margin-bottom: 1.5rem;
-    height: 2rem;
-    width: 30rem;
-    font-size: 1.4rem;
-}
-
-.confirmar {
-    margin-bottom: 2rem;
-    display: flex;
-    align-items: end;
-    gap: 0.3rem;
-}
-
-.confirmar input {
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-button {
-    margin-bottom: 2rem;
-    width: 15rem;
-    height: 3rem;
-    background-color: var(--cor_fundo);
-    border: 0;
-    color: var(--cor_secundaria);
-    font-weight: bolder;
-    font-size: 1.2rem;
-    border-radius: 0.5rem;
-}
-
-button:hover {
-    background-color: #072027;
-    color: #9eaebe;
-}
-
-button:active {
+.btn-warning {
     background-color: var(--cor_secundaria);
-    color: var(--cor_fundo);
-    border: 0.15rem solid var(--cor_fundo);
+}
+
+.btn-warning:hover, .btn-warning:active, .btn-warning:visited {
+    background-color: #ee5e00;
+    box-shadow: none;
+}
+
+input::placeholder{
+    font-family: "Roboto",sans-serif
 }
