--- a/web/assets/css/cadastro.css
+++ b/web/assets/css/cadastro.css
@@ -23,3 +23,11 @@
 input::placeholder{
     font-family: "Roboto",sans-serif
 }
+
+.regras {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 0.79rem;
+    margin-top: 0.3rem;
+}
